# gpstate

./: CMakeLists.txt  LICENSE  Makefile  README.md  memory.sh
include/: KF.h  dsho.h  matern32.h  ndsho.h  ndshois.h
src/: benchmark.cpp  gpstate_ndsho_benchmark.cpp  simulate_matern32.cpp  simulate_ndsho.cpp  simulate_sin.cpp  test_logl_dsho.cpp  test_logl_dsin.cpp  test_varf.cpp
